--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,11 @@
 /workspace.xml
 /.idea/
 /venv/
+/build/
+/dist/
+/log/
 *.log
+*.spec
 # Datasource local storage ignored files
 /dataSources/
 /dataSources.local.xml
